deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vending
  labels:
    app: vending
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: vendor
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vendor
  labels:
    app: vendor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vendor
  template:
    metadata:
      labels:
        app: vendor
    spec:
      containers:
      - name: nginx
        image: sleyva97/hello-world
        ports:
        - containerPort: 80
